Add newline at end of cache.yml
Fix missing newline at the end of the file.

--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -20,6 +20,7 @@ jobs:
           key: cache-3bdde62
 
       - name: prime-cache-3bdde62
+        id: prime-cache-3bdde62
         run: |
           echo "Cache hit? ${{ steps.cache-step.outputs.cache-hit }}"
           if [ "${{ steps.cache-step.outputs.cache-hit }}" != "true" ]; then
